--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -75,15 +75,17 @@
 <!-- Controles de paginación -->
 <div class="pagination-container" *ngIf="!isLoading && !isSearchActive && totalPages > 1">
   <div class="pagination-info">
-    <p>Página {{ currentPage + 1 }} de {{ totalPages }} - Total: {{ totalOffers }} ofertas</p>
+    <p>Total: {{ totalOffers }} ofertas</p>
   </div>
   <div class="pagination-controls">
-    <button mat-raised-button color="primary" [disabled]="currentPage === 0" (click)="previousPage()">
+    <button mat-button [disabled]="currentPage === 0" (click)="previousPage()">
       <mat-icon>navigate_before</mat-icon>
       Anterior
     </button>
-    <span class="page-numbers">{{ currentPage + 1 }} / {{ totalPages }}</span>
-    <button mat-raised-button color="primary" [disabled]="currentPage >= totalPages - 1" (click)="nextPage()">
+    <span class="page-numbers">
+      <span class="current-page">{{ currentPage + 1 }}</span> / {{ totalPages }}
+    </span>
+    <button mat-button [disabled]="currentPage >= totalPages - 1" (click)="nextPage()">
       Siguiente
       <mat-icon>navigate_next</mat-icon>
     </button>
