--- a/Front/src/app/main/index/index.component.css
+++ b/Front/src/app/main/index/index.component.css
@@ -1,46 +1,28 @@
-.welcome-container {
+.cards-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 24px;
+  margin: 1%;
+}
+
+.card-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60vh;
+  flex-direction: column;
+  border: 5px solid black;
+  background-color: gray;
+  border-radius: 15px;
+  border-left: 10px solid #e61b15;
 }
 
-.welcome-card {
-  background-color: #ffffff;
-  padding: 40px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  text-align: center;
+.card-titles {
+  display: flex;
+  flex-direction: column;
 }
 
-.username {
-  font-size: 1.5rem;
+mat-card-subtitle {
   color: #e61b15;
-  font-weight: bold;
-  margin-top: 10px;
 }
 
-.button-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-.btn-publicar {
-  background-color: #e61b15;
-  color: white;
-  padding: 14px 28px;
-  font-size: 16px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn-publicar:hover {
-  background-color: #333333;
-}
-
-h1 {
-  color: #333333;
+.card-content {
+  border-top: 5px solid black;
 }
